--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <body>
     <div id="app"></div>
     <script src="bundle.js"></script>
-    <h1>Michael's App</h1>
+    <h1>Michael's App - Or Is It</h1>
     </body>
 </html>
