--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Redux-React App</title>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
     <div id="app"></div>
